--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5f2b9">  <td>25/12/02 21:26:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSARInvoiceTest.createPOSARInvoiceTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">createPOSARInvoiceTestWithMandatoryFields</td> 
+<tr bgcolor="e5f2b9">  <td>26/01/08 22:23:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSARInvoiceTest.createPOSARInvoiceTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">createPOSARInvoiceTestWithMandatoryFields</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="6bcf94">  <td>25/12/02 21:25:18</td>   <td>-75131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSQuotationTest.createPOSQuotationTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">createPOSQuotationTestWithMandatoryFields</td> 
+<tr bgcolor="6bcf94">  <td>26/01/08 22:19:55</td>   <td>-190807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSQuotationTest.createPOSQuotationTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">createPOSQuotationTestWithMandatoryFields</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="71f9e9">  <td>25/12/02 21:25:54</td>   <td>-38865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSSalesOrderTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4e5ed836]">&gt;&gt;setup</td> 
+<tr bgcolor="71f9e9">  <td>26/01/08 22:21:19</td>   <td>-106869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSSalesOrderTest.createSalesOrderTestWithMandatoryFields()[pri:1, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4e5ed836]">createSalesOrderTestWithMandatoryFields</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="71f9e9">  <td>26/01/08 22:20:31</td>   <td>-154033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSSalesOrderTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSSalesOrderTest@4e5ed836]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="e5f2b9">  <td>25/12/02 21:26:10</td>   <td>-23452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSARInvoiceTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">&gt;&gt;setup</td> 
+<tr bgcolor="e5f2b9">  <td>26/01/08 22:21:49</td>   <td>-76051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSARInvoiceTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSARInvoiceTest@eadd4fb]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="6bcf94">  <td>25/12/02 21:24:51</td>   <td>-102647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">&gt;&gt;setup</td> 
+<tr bgcolor="6bcf94">  <td>26/01/08 22:19:03</td>   <td>-242182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POSQuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.POSQuotationTest@247310d0]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
